<resources>
    <string name="app_name">Sun Loto Center</string>
    <string name="connect_to_administer_account">Konekte pouw kapab administre kont ou</string>
    <string name="phone_number">Nimewo telefòn</string>
    <string name="password">Modpas</string>
    <string name="connect">Konekte</string>
    <string name="term_and_condition_link">Lèw klike sou \"Konekte\" ou aksepte \"Tèm ak Kondisyon\" nou yo</string>
    <string name="administrator">Administratè</string>
    <string name="borlet">Bòlèt</string>
    <string name="borlet_for_encoding">Bolet</string>
    <string name="employee">Anplwaye</string>
    <string name="employee_total">Total: %1$d anplwaye</string>
    <string name="microphone">Difize</string>
    <string name="notification">Notifikasyon</string>
    <string name="setting">Konfigirasyon</string>
    <string name="personal_information">Enfòmasyon pèsonèl</string>
    <string name="company_information">Enfòmasyon konpayi an</string>
    <string name="change_password">Chanje modpas</string>
    <string name="manage_game">Jere jwèt yo</string>
    <string name="change_game_price">Chanje pri lo yo</string>
    <string name="limit">Limite dega</string>
    <string name="logout">Dekonekte</string>
    <string name="version_code">(Version: %1$d)</string>
    <string name="create">Kreye</string>
    <string name="city">Vil</string>
    <string name="address">Adrès</string>
    <string name="category">Kategori</string>
    <string name="last_name">Siyati</string>
    <string name="first_name">Non</string>
    <string name="create_employee">Kreye anplwaye</string>
    <string name="company_phone_number">Nimewo telefòn konapyi an</string>
    <string name="company_name">Non konpayi an</string>
    <string name="morning">maten</string>
    <string name="price">Pri</string>
    <string name="loto5">Loto 5</string>
    <string name="loto4">Loto 4</string>
    <string name="loto3">Loto 3</string>
    <string name="marriage">Maryaj</string>
    <string name="lo3">3e Lo</string>
    <string name="lo2">2e Lo</string>
    <string name="lo1">1e Lo</string>
    <string name="add">Ajoute</string>
    <string name="add_game_to_block">Ajoute kèk boul ou vle bloke</string>
    <string name="alert">Alèt</string>
    <string name="block">Blòk</string>
    <string name="alert_and_block_title">Apati de ki kantite kòb ou  vle sistèm nan \nalètew e apati de ki kantite kòb ou \nvle bloke yon boul?</string>
    <string name="report">Rapò</string>
    <string name="balance">Balans</string>
    <string name="enter">Antre</string>
    <string name="out">Sòti</string>
    <string name="balance_value">Balans: %.0f HTG</string>
    <string name="enter_value">Antre: %.0f HTG</string>
    <string name="out_value">Sòti: %.0f HTG</string>
    <string name="from">jj-mm-aaaa</string>
    <string name="to">jj-mm-aaaa</string>
    <string name="result">Tiraj</string>
    <string name="bank">Bank</string>
    <string name="bank_total">Total: %1$d bank</string>
    <string name="since">Depi: %s</string>
    <string name="seller">Vandè</string>
    <string name="submit">Soumèt</string>
    <string name="empty_validator_error">Dezole, chan sa pa ka vid</string>
    <string name="max_lenght_validator_error">Dezole, ou pa ka antre plis ke %1d karaktè</string>
    <string name="internet_error_title">Erè</string>
    <string name="internet_error_message">Gen yon pwoblèm, reeseye ankò.</string>
    <string name="please_wait">Fon ti tann tanpri...</string>
    <string name="connected">Ou konekte</string>
    <string name="no_connexion">Pa gen entènèt</string>
    <string name="ok">Ok</string>
    <string name="min_length_validator_error">Chan sa dwe gen pou pi piti %1d karaktè</string>
    <string name="length_validator_error">Chan sa dwe genyen egzakteman %1d karaktè</string>
    <string name="incorrect_credetential_message">Enfòmasyon ou antre yo pa kòrèk, verifye yo epi eseye ankò</string>
    <string name="male">Gason</string>
    <string name="female">Fanm</string>
    <string name="success_title">Siksè</string>
    <string name="create_account_success_message">Kont itilizatè an kreye avèk siksè</string>
    <string name="update_own_account_success_message">Ou modifye kont ou avèk siksè</string>
    <string name="update_user_account_success_message">Ou modifye kont itilizatè an avèk siksè</string>
    <string name="repeat_password">Konfime modpas lan</string>
    <string name="new_password">Nouvo modpas</string>
    <string name="old_password">Ansyen modpas</string>
    <string name="equal_validator_error">Tou 2 modpas yo dwe egal</string>
    <string name="password_change_success">Ou chanje modpass ou avèk siksè</string>
    <string name="update_user_password_success_message">Ou chanje modpas itilizatè an avèk siksè</string>
    <string name="wrong_old_password_error_message">Ansyen modpas lan pa kòrèk</string>
    <string name="block_user">Bloke</string>
    <string name="reprimand">Reprimande</string>
    <string name="addOrChangePassword">Ajoute/Chanje modpas</string>
    <string name="play">Jwe</string>
    <string name="auto_loto_4">Oto Loto 4</string>
    <string name="marry_all">Marye tout</string>
    <string name="ball">Boul</string>
    <string name="amount">Montan</string>
    <string name="option">Opsyon</string>
    <string name="total_preview">%1d BOUL        TOTAL: %.0f HTG</string>
    <string name="action">Aksyon</string>
    <string name="amount1">Montan 1</string>
    <string name="amount2">Montan 2</string>
    <string name="amount3">Montan 3</string>
    <string name="cancel">Anile</string>
    <string name="all_amount">Tout montan</string>
    <string name="greater_than_zero_validator_error">Valè sa dwe pi fò ke zewo</string>
    <string name="game_success_message">Jwèt ou an soumèt avèk siksè</string>
    <string name="print_receipt">Enprime</string>
    <string name="security_interval">Entèval sekirite (an minit)</string>
    <string name="morning_time">Lè kloti maten (00:00)</string>
    <string name="night_time">Lè kloti aswè (00:00)</string>
    <string name="new_york">Nouyòk</string>
    <string name="florida">Florida</string>
    <string name="georgia">Jòjya</string>
    <string name="create_game_schedule_success_message">Lè pou jwèt la kreye avèk siksè!</string>
    <string name="update_game_schedule_success_message">Lè pou jwèt lan modifye avèk siksè</string>
    <string name="game_open">Ouvè</string>
    <string name="night">swa</string>
    <string name="game_close">Fèmen</string>
    <string name="game_close_error_message">Jwèt sa fèmen kounya. Lap ouvè demen apati de minwi</string>
    <string name="loading">Chaje..</string>
    <string name="reprimand_count">Reprimand: %1$d</string>
    <string name="un_block_user">Debloke</string>
    <string name="account_block_success_message">Ou bloke kont itilizatè an ak siksè!</string>
    <string name="account_unblocked_sucess_message">Ou debloke kont itilizatè ak siksè!</string>
    <string name="why_reprimand">Antre rezon reprimand lan...</string>
    <string name="add_reprimand_error_message">Ou dwe ajoute rezon reprimand lan!</string>
    <string name="blame_susccess_message">Ou reprimande itilizatè an avèk siksè!</string>
    <string name="no_data">Pa gen done</string>
    <string name="bank_updated_success_message">Ou anrejistre enfòmasyon bank lan avèk siksè!</string>
    <string name="create_bank_success_message">Ou kreye bank lan avèk siksè!</string>
    <string name="update_bank_success_message">Ou modifye bank lan avèk siksè!</string>
    <string name="create_bank">Kreye bank</string>
    <string name="choose_a_seller">Chwazi yon vandè</string>
    <string name="kod">Kòd bank lan</string>
    <string name="change">Fè yon chanjman</string>
    <string name="update_user">Modifye itilizatè an</string>
    <string name="create_game_price_success_message">Ou ajoute pri jwèt yo avèk siksè!</string>
    <string name="update_game_price_success_message">Ou modifye pri jwèt yo avèk siksè!</string>
    <string name="create_game_alert_and_block_success_message">Ou anrejistre alèt ak blòk pou boul yo avèk siksè!</string>
    <string name="update_game_alert_and_block_success_message">Ou modifye alèt ak blòk pou boul yo avèk siksè!</string>
    <string name="block_game">Bloke boul</string>
    <string name="to_block">Bloke</string>
    <string name="create_blocked_game_success_message">Ou bloke boul la avèk siksè!</string>
    <string name="update_blocked_game_success_message">Ou debloke boul lan ak siskè!</string>
    <string name="game">Jwèt</string>
    <string name="type">Tip jwèt</string>
    <string name="unblock_game">Debloke boul la</string>
    <string name="want_to_unblock_game">Eske ou si ou vle debloke %1$s?</string>
    <string name="yes">Wi</string>
    <string name="no">Non</string>
    <string name="bad_time_validator_error">Lè sa pa bon, chwazi yon lè ant 00:00 e 23:59</string>
    <string name="max_min_validator_error">Chan sa pa dwe pi plis ke %1$d minit</string>
    <string name="want_to_block_schedule">Ou si ou vle bloke jwèt sa?</string>
    <string name="to_unblock">Debloke</string>
    <string name="attention">Atansyon</string>
    <string name="unsubmitted_game_warning_message">Ou gen boul kew poko soumèt, siw fè bak wap pèdi tout. Ou vle fè bak kanmenm?</string>
    <string name="create_result_success_message">Ou pibliye rezilta tiraj lan avèk siksè!</string>
    <string name="morning_uppercase">Maten</string>
    <string name="night_uppercase">Swa</string>
    <string name="date_validator_error">Dat sa pa bon</string>
    <string name="lost">Pèt</string>
    <string name="receipt">Fich %1$s</string>
    <string name="total_amount">%1.0f HTG - %2.0f HTG = %3.0f</string>
    <string name="enter_message">Antre mesaj ou vle pataje an</string>
    <string name="send_broadcast">Voye yon mesaj jeneral bay itilizatè yo</string>
    <string name="broadcast">Emisyon</string>
    <string name="broadcast_susccess_message">Ou emèt mesaj lan avèk siksè!</string>
    <string name="you">Ou menm</string>
    <string name="author_system">Sistèm</string>
    <string name="admin">Admin</string>
    <string name="est_time_remark">N:B: Lè ak dat ou chwazi nan sistèm nan, sistèm nan konsiderel kòm lè Nouyòk</string>
    <string name="message_not_empty">Ou poko voye notifikasyon an ale. Siw fè bak wap pèdi tout done yo. Ou si ou vle fè bak?</string>
    <string name="price_currency">%1.0f HTG</string>
    <string name="update_company_success_message">Ou chanje enfòmasyon konpayi an avèk siksè!</string>
    <string name="create_company">Kreye konpayi</string>
    <string name="profile_picture_required">Ou dwe mete yon logo pou konpayi an.</string>
    <string name="blocked_account">Kont ou bloke. Kontakte Administrasyon pou plis detay.</string>
    <string name="game_update_success_message">Ou modifye fich lan avèk siksè!</string>
    <string name="receipt_number">No: %1$s</string>
    <string name="enter_receip_number">Antre nimewo fich wap chèche an</string>
    <string name="no_printer_no_submit">Ou dwe konekte a yon enprimant avan ou soumèt fich lan.</string>
    <string name="no_printer_connect">Ou dwe konekte a yon enprimant pouw ka enprime fich sa.</string>
    <string name="twin_bolert">Bòlèt jimo</string>
    <string name="loto3_twin">Loto3 jimo</string>
    <string name="loto4_twin">Loto4 jimo</string>
    <string name="loto5_twin">Loto5 jimo</string>
    <string name="marriage_twin">Maryaj jimo</string>
    <string name="twin_game">Jwèt jimo</string>
    <string name="date_value">Dat: %1$s</string>
    <string name="session_value">Sesyon: %1$s</string>
    <string name="game_value">Jwèt: %1$s</string>
    <string name="game_value_for_encoding">Jwet: %1$s</string>
</resources>