<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".admin.AdminPersonalInfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:background="@color/main_gray"
        android:paddingBottom="1dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:title="@string/change_password" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/change_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25dp"
                    app:layout_constraintBottom_toTopOf="@+id/edxOldPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <com.sunlotocenter.validator.ValidatableEditText
                    android:id="@+id/edxOldPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    app:drawable_left="@drawable/lock_outline_18"
                    app:hint="@string/old_password"
                    app:layout_constraintBottom_toTopOf="@+id/edxNewPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:text_color="@color/colorPrimary"
                    app:text_size="@dimen/main_text_size"
                    android:inputType="textPassword"/>

                <com.sunlotocenter.validator.ValidatableEditText
                    android:id="@+id/edxNewPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    app:drawable_left="@drawable/lock_outline_18"
                    app:hint="@string/new_password"
                    app:layout_constraintBottom_toTopOf="@+id/edxRepeatPasssword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:text_color="@color/colorPrimary"
                    app:text_size="@dimen/main_text_size"
                    android:inputType="textPassword"/>

                <com.sunlotocenter.validator.ValidatableEditText
                    android:id="@+id/edxRepeatPasssword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    app:drawable_left="@drawable/lock_outline_18"
                    app:hint="@string/repeat_password"
                    app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:text_color="@color/colorPrimary"
                    app:text_size="@dimen/main_text_size"
                    android:inputType="textPassword"/>

                <life.sabujak.roundedbutton.RoundedButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="60dp"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/main_text_size"
                    app:buttonCornerRadius="@dimen/main_corner"
                    app:buttonGradientEndColor="@color/colorPrimary"
                    app:buttonGradientStartColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>