<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".admin.GameScheduleActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:background="@color/main_gray"
        android:paddingBottom="1dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:title="@string/manage_game" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/layout1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spnGame"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/edit_text_height"
                        android:paddingStart="27dp"
                        android:paddingEnd="10dp"
                        android:background="@drawable/main_edit_text_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:prompt="@string/category"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/gamepad_circle_outline_black_18"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/chevron_down_black_18"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/spnGame"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/edxInterval"
                    android:layout_marginBottom="10dp">

                    <com.sunlotocenter.validator.ValidatableEditText
                        android:id="@+id/edxMorning"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/edit_text_height"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/main_edit_text_background"
                        android:drawablePadding="7dp"
                        android:hint="@string/morning_time"
                        android:inputType="number"
                        app:text_size="@dimen/main_text_size"
                        app:max_length="5"
                        app:hint="00:00"
                        app:drawable_left="@drawable/av_timer_black_18"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/edxNight"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.sunlotocenter.validator.ValidatableEditText
                        android:id="@+id/edxNight"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/edit_text_height"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/main_edit_text_background"
                        android:hint="@string/night_time"
                        android:inputType="number"
                        app:hint="00:00"
                        app:text_size="@dimen/main_text_size"
                        app:max_length="5"
                        app:drawable_left="@drawable/av_timer_black_18"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/edxMorning"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.sunlotocenter.validator.ValidatableEditText
                    android:id="@+id/edxInterval"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/main_edit_text_background"
                    android:hint="@string/security_interval"
                    android:inputType="number"
                    app:text_size="@dimen/main_text_size"
                    app:max_length="3"
                    app:drawable_left="@drawable/av_timer_black_18"
                    app:layout_constraintBottom_toTopOf="@+id/btnAdd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <life.sabujak.roundedbutton.RoundedButton
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="60dp"
                    android:text="@string/create"
                    android:textAllCaps="false"
                    app:buttonGradientStartColor="@color/colorPrimary"
                    app:buttonGradientEndColor="@color/colorPrimary"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:buttonCornerRadius="@dimen/main_corner"
                    android:textSize="@dimen/main_text_size"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>